# TransPortNoe

./: .env  pyproject.toml
core/: settings.py  urls.py
documents/: admin.py  apps.py  models.py  urls.py  views.py
main/: urls.py  views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/management/commands/: seed_db.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_options_alter_order_options_and_more.py  0004_order_status.py
routes/: admin.py  apps.py  models.py  urls.py  views.py
routes/migrations/: 0001_initial.py  0002_alter_route_options_alter_route_unique_together_and_more.py
static/css/: style.css
staticfiles/css/: style.css
templates/: 400.html  403.html  404.html  500.html
templates/includes/: footer.html  header.html
templates/main/: base.html  index.html  price.html
templates/orders/: catalog.html  order_detail.html  order_form.html
templates/users/: login.html  logistics.html  manage_roles.html  profile.html  profile_edit.html  register.html
templates/vehicles/: vehicle_create.html  vehicle_list.html
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_driverprofile_options_and_more.py  0003_alter_customuser_role.py
vehicles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py  0002_alter_vehicle_options.py
