[project]
name = "transportnoe"
version = "0.1.0"
description = ""
authors = [
    {name = "Kadfler",email = "mgav4751@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "faker (>=40.27.0,<41.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
